[metadata]
name = cairo-codecov
version = 0.1.0
description = Testing codecov integration with cairo lang
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
contracts = "*.cairo"

[options.extras_require]
testing =
    setuptools
    tox
    pytest
